# rag-from-scratch-with-options

./: .gitignore  Dockerfile  RAG_Checklist.md  RAG_Conceptual_Overview.md  README.md  check_schema.py  docker-compose.yml  init_pgvector.sql  pgvector2.Dockerfile  pyproject.toml
data/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 1247  1247_fsm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13436  13436_fsm  13436_vm  13440  13441  13441_fsm  13441_vm  13446  13446_fsm  13446_vm  13450  13451  13451_fsm  13451_vm  13455  16484  16495  16498  16498_fsm  16499  16500  2187  2224  2228  2579  2600  2600_fsm  2600_vm  2601  (+162 more)
data/base/4/: 2619
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
ingestion/: ingest_synthetic.py  ingest_tutor.py
retrieval/: generate_answer.py  retrieve_chunks.py
scripts/: add_source_column.py  alter_embedding_column.py  source_summary.py
src/: main.py
src/ingestion/: ingest_arxiv_api.py  ingest_synthetic.py
src/retrieval/: chunk_utils.py  db_utils.py  generate_answer.py  retrieve_chunks.py
